<resources>
    <string name="app_name">薇信阅读</string>
    <string name="drawer_catalog">目录</string>
    <string name="drawer_note">笔记</string>
    <string name="drawer_hotline">热门划线</string>
    <string name="catalog_search_hint">搜索全书内容</string>
    <string name="catalog_already_read">已读</string>
    <string name="read_menu_idea_hint">写下这一刻的想法</string>
    <string name="no_data">暂无数据</string>
    <string name="net_error">网络连接失败</string>
    <string name="join_teach_class_title">请输入教学班号</string>
    <string name="join">加入</string>
    <string name="main_find">发现</string>
    <string name="main_book_shelf">书架</string>
    <string name="main_mine">我</string>
    <string name="main_teach_class">教学班</string>
    <string name="bookshelf_mine">我的书架</string>
    <string name="mine_teach_class">我的教学班</string>

    <string name="login_hint_password">密码</string>
    <string name="login_hint_userid">学号/手机号</string>
    <string name="login_login">登录</string>
    <string name="login_or">或</string>
    <string name="login_register">注册账号</string>
    <string name="login_forget_password">忘记密码</string>

    <string name="register_title">注册账号</string>
    <string name="register_name">姓名</string>
    <string name="register_hint_name">姓名</string>
    <string name="register_stuid">学号</string>
    <string name="register_hint_stuid">您的学号</string>
    <string name="register_phone">手机号</string>
    <string name="register_hint_phone">手机号码</string>
    <string name="register_password">密码</string>
    <string name="register_password_confirm">确认密码</string>
    <string name="register_hint_password">密码为6–18位</string>
    <string name="register">注册</string>
    <string name="password_not_match">两次输入密码不一致</string>
    <string name="password_length_illegal">密码长度需要为6–18位</string>
</resources>
