<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height">

        <ImageView
            android:id="@+id/img_back"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back"
            android:padding="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />

        <TextView
            android:text="@string/register_title"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <LinearLayout
        android:padding="18dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/register_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_name"
            android:gravity="end"
            android:textSize="14sp"
            android:maxLength="4"
            android:hint="@string/register_hint_name"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:padding="18dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/register_stuid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_stuid"
            android:gravity="end"
            android:textSize="14sp"
            android:inputType="number"
            android:singleLine="true"
            android:maxLength="20"
            android:hint="@string/register_hint_stuid"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:padding="18dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/register_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_phone"
            android:gravity="end"
            android:textSize="14sp"
            android:maxLength="11"
            android:inputType="phone"
            android:hint="@string/register_hint_phone"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:padding="18dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_password"
            android:gravity="end"
            android:textSize="14sp"
            android:hint="@string/register_hint_password"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@color/divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>

    <LinearLayout
        android:padding="18dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/register_password_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_password_confirm"
            android:gravity="end"
            android:textSize="14sp"
            android:hint="@string/register_hint_password"
            android:inputType="textPassword"
            android:maxLength="@integer/password_max_length"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:enabled="false"
        android:layout_margin="18dp"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>